<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">去哪儿吃</string>
    <string name="version_info">V 1.0</string>
    <string name="forsure">确定</string>
    <string name="cancel_order">取消订单</string>
    <string name="evaluate_order">评价订单</string>
    <string name="forcode">获取验证码</string>
    <string name="phone_hint">请输入手机号</string>
    <string name="sns_code_hint">请输入验证码</string>
    <string name="service_time">营业时间:</string>
    <string name="address">餐厅地址:</string>
    <string name="restaurant_address">北京市海淀区交大东路3号</string>
    <string name="tv_restaurant_name">餐厅名称:</string>
    <string name="tv_evaluate">总体评价</string>
    <string name="tv_nav_type">餐厅分类</string>
    <string name="tv_nav_sort">排序</string>
    <string name="phone">餐厅电话:</string>
    <string name="restaurant_phone">010-66666666</string>
    <string name="desk_inforamation">空座情况</string>
    <string name="feedback_hint">输入反馈信息</string>
    <string name="evaluate_hint">输入您对餐厅的评价！</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_username_hint">请输入用户名&#8230;</string>
    <string name="login_password_hint">请输入密码&#8230;</string>
    <string name="login_repassword_hint">请确认密码&#8230;</string>
    <string name="login_email_hint">请输入邮箱&#8230;</string>
    <string name="toast_error_password_null">密码不能为空</string>
    <string name="toast_error_username_null">用户名不能为空</string>
    <string name="toast_error_email_null">邮箱不能为空</string>
    <string name="toast_error_comfirm_password">输入的两次密码不一致</string>
    <string name="network_tips">当前网络不可用,请检查您的网络!</string>
    <string name="open_network">打开网络设置</string>
    <string name="login">登录</string>
    <string name="logout">退出登录</string>
    <string name="tv_booking_time">预定时间:</string>
    <string name="booking_time">2015/05/28/12:30</string>
    <string name="tv_booking_person">预定人:</string>
    <string name="booking_person">熊爸爸</string>
    <string name="tv_booking_phone">预留手机号:</string>
    <string name="booking_phone">156****2742</string>
    <string name="order_time">2015/05/28/09:54</string>
    <string name="order_status">待评价</string>
    <string name="order_schedule">订单进度</string>
    <string name="tv_order_status">订单状态</string>
    <string name="tv_order_detail">订单详情</string>
    <string name="register">注册</string>
    <string name="register_txt1">还没有账号？</string>
    <string name="register_txt2">立即注册 ></string>
    <string name="login_account">账号 </string>
    <string name="login_pwd">密码 </string>
    <string name="login_rpwd">确认密码 </string>
    <string name="login_email">邮箱</string>
    <string name="restaurant_name">小厨小菜</string>
    <string name="restaurant_type">川菜</string>
    <string name="type">餐厅类型:</string>
    <string name="self_nickname">熊爸爸</string>
    <string name="self_phone">156****2742</string>
    <string name="self_password">修改密码</string>
    <string name="self_order">我的订单</string>
    <string name="self_refund">我的代金券</string>
    <string name="refund_money">钱包余额</string>
    <string name="self_collection">我的收藏</string>
    <string name="self_compose">意见反馈</string>
    <string name="self_about">关于</string>
    <string name="service_phone">客服电话：800-820-8820</string>
    <string name="price">￥80/人</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_regist">RegistActivity</string>
    <string name="title_activity_self">SelfActivity</string>
    <string name="title_activity_changename">ChangeNameActivity</string>
    <string name="title_activity_changepsw">ChangePswActivity</string>
    <string name="title_activity_refund">MyRefundActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_change_name">ChangeNameActivity</string>
    <string name="title_activity_change_psw">ChangePswActivity</string>
    <string name="title_activity_my_refund">MyRefundActivity</string>
    <string name="title_activity_feed_back">FeedBackActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_snsregist">SNSRegistActivity</string>
    <string name="title_activity_restaurant">RestaurantActivity</string>
    <string name="santai">散台:</string>
    <string name="baojian">包间:</string>
    <string name="booking">预订座位</string>
    <string name="title_activity_booking">BookingActivity</string>
    <string name="title_activity_order_list">OrderListActivity</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="title_activity_evaluate">EvaluateActivity</string>
    <string name="title_activity_search">SearchActivity</string>

</resources>
