<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f6f6"
    android:orientation="vertical" >

    <include layout="@layout/include_bar" />

    <!-- 订单状态 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#ffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_order_status"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tv_order_status"
            android:textColor="@color/theme_color"
            android:textSize="16sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="#dbdbdb" />

        <TextView
            android:id="@+id/tv_order_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tv_order_detail"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_order_status"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#f6f6f6"
        android:orientation="vertical"
        android:visibility="visible" >

        <TextView
            android:id="@+id/order_schedule"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/order_schedule"
            android:textColor="#656565"
            android:textSize="16sp" />
        <!-- 订单状态 -->

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="250dp"
            android:layout_marginTop="20.0dip" >

            <ImageView
                android:id="@+id/time_line_item_bg_line"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:paddingLeft="50.0dip"
                android:scaleType="fitXY"
                android:src="@drawable/timeline" />

            <ListView
                android:id="@+id/timeline_list"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@android:color/transparent"
                android:cacheColorHint="@android:color/transparent"
                android:divider="@null"
                android:dividerHeight="30dp"
                android:fadingEdge="none"
                android:listSelector="@android:color/transparent"
                android:paddingLeft="30.0dip"
                android:scrollbarStyle="outsideInset" >
            </ListView>
        </FrameLayout>
    </LinearLayout>

    <!-- 订单详情 -->

    <LinearLayout
        android:id="@+id/ll_order_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:background="#ffffff"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:drawableLeft="@drawable/icon_comment"
            android:drawablePadding="20dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/tv_order_detail"
            android:textColor="#656565"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#dbdbdb" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#ffffff"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/tv_restaurant_name"
                android:textColor="#656565"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/restaurant_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp"
                android:gravity="center_vertical"
                android:text="@string/restaurant_name"
                android:textColor="#656565" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#dbdbdb" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#ffffff"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/phone"
                android:textColor="#656565"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/restaurant_phone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp"
                android:gravity="center_vertical"
                android:text="@string/restaurant_phone"
                android:textColor="#656565" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#dbdbdb" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#ffffff"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/address"
                android:textColor="#656565"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/restaurant_address"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp"
                android:gravity="center_vertical"
                android:text="@string/restaurant_address"
                android:textColor="#656565" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#dbdbdb" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#ffffff"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/tv_booking_time"
                android:textColor="#656565"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/booking_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp"
                android:gravity="center_vertical"
                android:text="@string/booking_time"
                android:textColor="#656565" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#dbdbdb" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#ffffff"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/tv_booking_person"
                android:textColor="#656565"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/booking_person"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp"
                android:gravity="center_vertical"
                android:text="@string/booking_person"
                android:textColor="#656565" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#dbdbdb" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#ffffff"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/tv_booking_phone"
                android:textColor="#656565"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/booking_phone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp"
                android:gravity="center_vertical"
                android:text="@string/booking_phone"
                android:textColor="#656565" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_cancel_order"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/base_action_bar_height"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@drawable/btn_login_selector"
        android:text="@string/cancel_order"
        android:textColor="@color/base_color_text_white"
        android:textSize="@dimen/text_size_large"
        android:visibility="visible" />
    <Button
        android:id="@+id/btn_evaluate_order"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/base_action_bar_height"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@drawable/btn_login_selector"
        android:text="@string/evaluate_order"
        android:textColor="@color/base_color_text_white"
        android:textSize="@dimen/text_size_large"
        android:visibility="gone" />

</LinearLayout>