<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_bg_color"
    android:orientation="vertical" >

    <include layout="@layout/include_bar" />

    <LinearLayout
        style="@style/SNS_Input"
        android:layout_width="match_parent" >

        <EditText
            android:id="@+id/et_phone"
            style="@style/Register_Edit"
            android:ems="10"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            android:textColorHint="#ffdddddd" />

        <requestFocus />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3" >

        <LinearLayout
            style="@style/SNS_Input"
            android:layout_width="200dp" >

            <EditText
                android:id="@+id/et_sns_code"
                android:layout_width="170dp"
                style="@style/Register_Edit"
                android:hint="@string/sns_code_hint"
                android:textColorHint="#ffdddddd"
                android:inputType="textPassword" >
            </EditText>
        </LinearLayout>

        <Button
            android:id="@+id/btn_forcode"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_marginLeft="@dimen/register_margin"
            android:layout_marginRight="@dimen/register_margin"
            android:layout_marginTop="@dimen/register_margin"
            android:background="@drawable/btn_login_selector"
            android:text="@string/forcode"
            android:textColor="@color/base_color_text_white"
            android:textSize="@dimen/text_size_large" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_forsure"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/base_action_bar_height"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@drawable/btn_login_selector"
        android:text="@string/forsure"
        android:textColor="@color/base_color_text_white"
        android:textSize="@dimen/text_size_large" />

</LinearLayout>