<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_bg_color"
    android:orientation="vertical" >

    <include layout="@layout/include_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
         android:layout_margin="10dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dip"
            android:text="@string/tv_evaluate"
            android:textColor="@color/base_color_text_gray"
            android:textSize="20sp" />

        <RatingBar
            android:id="@+id/evaluate_ratingbar"
            style="@style/Where2Eat.BigRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dip"
            android:isIndicator="false"
            android:numStars="5"
            android:rating="1" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_evaluate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/input"
        android:gravity="top|left"
        android:hint="@string/evaluate_hint"
        android:minLines="5"
        android:paddingLeft="10dp" />

    <Button
        android:id="@+id/btn_forsure"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/base_action_bar_height"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@drawable/btn_login_selector"
        android:text="@string/forsure"
        android:textColor="@color/base_color_text_white"
        android:textSize="@dimen/text_size_large" />

</LinearLayout>